--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 
         <section id="services">
             <h2>What I Do</h2>
+            <!-- add an image -->
             <p>I’m learning web development through the Power Learn Project. This project demonstrates clean HTML5 structure.</p>
         </section>
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>You can reach me via <a href="mailto:brianoyaro2000@gmail.com">email</a>.</p>
+            <p>You can reach me via email at:  <a href="mailto:brianoyaro2000@gmail.com" aria-label="email">brianoyaro2000@gmail.com</a>.</p>
+            <p>My contact number is: <a href='tel:0700000000' aria-label="contact phone number">0700000000</a></p>
+            <address aria-label="address location">Kiembeni, Mombasa, Kenya</address>
         </section>
     </main>
     <footer>
